--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "yajra/laravel-datatables-buttons": "^4.13",
         "barryvdh/laravel-dompdf": "^2.0",
         "barryvdh/laravel-snappy": "^1.0",
-        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
+        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3",
+        "spatie/laravel-permission": "^5.11",
+        "laravelcollective/html": "^6.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
