--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "spatie/laravel-permission": "^5.11",
         "laravelcollective/html": "^6.4",
         "elibyy/tcpdf-laravel": "^10.0",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "laravel/passport": "^10.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
